[gd_scene load_steps=36 format=2]

[ext_resource path="res://Fonts/Roboto-Black.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Sprites/Menu/Time.png" type="Texture" id=2]
[ext_resource path="res://Fonts/Roboto-MediumItalic.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Sprites/Menu/Difficulty.png" type="Texture" id=4]
[ext_resource path="res://Prefabs/menu/Save Block.gd" type="Script" id=6]
[ext_resource path="res://Fonts/Roboto-Medium.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://Sprites/Menu/Delete.png" type="Texture" id=8]
[ext_resource path="res://Sprites/Menu/Color.png" type="Texture" id=9]
[ext_resource path="res://Sprites/Menu/Edit.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Menu/Dupe.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Menu/Play.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Menu/Cancel.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Menu/Check.png" type="Texture" id=14]
[ext_resource path="res://Sprites/tab/savedelete.png" type="Texture" id=15]
[ext_resource path="res://Styles/Master Theme.tres" type="Theme" id=16]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.74902, 0.74902, 0.74902, 0.74902 )
border_color = Color( 0.568627, 1, 0, 0.6 )
shadow_size = 3

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.25 )
border_color = Color( 1, 1, 1, 0.65 )
expand_margin_left = 10.0
expand_margin_right = 10.0
expand_margin_top = 10.0
expand_margin_bottom = 10.0

[sub_resource type="DynamicFont" id=4]
size = 14
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=13]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 1, 1, 1, 0.0313726 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 1, 1, 1, 0.06 )

[sub_resource type="StyleBoxFlat" id=8]
draw_center = false

[sub_resource type="StyleBoxFlat" id=14]
bg_color = Color( 0.699219, 0.699219, 0.699219, 0.75 )
border_color = Color( 0.568627, 1, 0, 0.6 )
shadow_size = 3

[sub_resource type="DynamicFont" id=15]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=16]
bg_color = Color( 0.423529, 0.423529, 0.423529, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.117188, 0.117188, 0.117188, 0.54902 )
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=17]
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.0390625, 0.0390625, 0.0390625, 0.54902 )
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=18]
bg_color = Color( 0.352941, 0.352941, 0.352941, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.078125, 0.078125, 0.078125, 0.54902 )
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=19]
draw_center = false

[sub_resource type="DynamicFont" id=20]
size = 14
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=21]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[sub_resource type="StyleBoxFlat" id=22]
bg_color = Color( 0.423529, 0.423529, 0.423529, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.117188, 0.117188, 0.117188, 0.54902 )
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=23]
bg_color = Color( 0.25098, 0.25098, 0.25098, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.0390625, 0.0390625, 0.0390625, 0.54902 )
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=24]
bg_color = Color( 0.352941, 0.352941, 0.352941, 1 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color( 0.078125, 0.078125, 0.078125, 0.54902 )
shadow_size = 4
anti_aliasing = false

[sub_resource type="StyleBoxFlat" id=25]
draw_center = false

[node name="Save Block" type="MarginContainer"]
margin_right = 269.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 472, 103 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0
script = ExtResource( 6 )

[node name="v" type="VBoxContainer" parent="."]
margin_right = 269.0
margin_bottom = 125.0
custom_constants/separation = 0

[node name="m" type="MarginContainer" parent="v"]
margin_right = 269.0
margin_bottom = 81.0

[node name="bg" type="Panel" parent="v/m"]
self_modulate = Color( 1, 0.192157, 0.192157, 1 )
margin_right = 269.0
margin_bottom = 81.0
custom_styles/panel = SubResource( 1 )

[node name="m" type="MarginContainer" parent="v/m"]
margin_right = 269.0
margin_bottom = 81.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="v" type="VBoxContainer" parent="v/m/m"]
margin_left = 10.0
margin_top = 10.0
margin_right = 259.0
margin_bottom = 71.0
custom_constants/separation = 20

[node name="top" type="MarginContainer" parent="v/m/m/v"]
margin_right = 249.0
margin_bottom = 17.0

[node name="bg" type="Panel" parent="v/m/m/v/top"]
margin_right = 249.0
margin_bottom = 17.0
custom_styles/panel = SubResource( 11 )

[node name="h" type="HBoxContainer" parent="v/m/m/v/top"]
margin_right = 249.0
margin_bottom = 17.0
alignment = 1

[node name="save name" type="Label" parent="v/m/m/v/top/h"]
margin_right = 160.0
margin_bottom = 17.0
rect_min_size = Vector2( 160, 0 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "huge filename.lored :) :) :D asdf"
clip_text = true

[node name="date" type="Label" parent="v/m/m/v/top/h"]
margin_left = 174.0
margin_top = 2.0
margin_right = 249.0
margin_bottom = 15.0
size_flags_horizontal = 10
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 13 )
text = "12/18/22, 18:30"
align = 1

[node name="h" type="HBoxContainer" parent="v/m/m/v"]
margin_top = 37.0
margin_right = 249.0
margin_bottom = 61.0
custom_constants/separation = 8
alignment = 1

[node name="time played" type="HBoxContainer" parent="v/m/m/v/h"]
margin_left = 50.0
margin_right = 102.0
margin_bottom = 24.0

[node name="icon" type="Panel" parent="v/m/m/v/h/time played"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/panel = SubResource( 3 )

[node name="shadow" type="Sprite" parent="v/m/m/v/h/time played/icon"]
self_modulate = Color( 0, 0, 0, 0.501961 )
position = Vector2( 13, 13 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="v/m/m/v/h/time played/icon"]
position = Vector2( 12, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 2 )

[node name="text" type="Label" parent="v/m/m/v/h/time played"]
margin_left = 28.0
margin_top = 3.0
margin_right = 52.0
margin_bottom = 20.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "35h"
align = 1

[node name="difficulty" type="HBoxContainer" parent="v/m/m/v/h"]
margin_left = 110.0
margin_right = 198.0
margin_bottom = 24.0

[node name="icon" type="Panel" parent="v/m/m/v/h/difficulty"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
custom_styles/panel = SubResource( 3 )

[node name="shadow" type="Sprite" parent="v/m/m/v/h/difficulty/icon"]
self_modulate = Color( 0, 0, 0, 0.501961 )
position = Vector2( 13, 13 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="Sprite" type="Sprite" parent="v/m/m/v/h/difficulty/icon"]
position = Vector2( 12, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 4 )

[node name="text" type="Label" parent="v/m/m/v/h/difficulty"]
margin_left = 28.0
margin_top = 3.0
margin_right = 88.0
margin_bottom = 20.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Marathon"
align = 1

[node name="select" type="Button" parent="v/m"]
visible = false
margin_right = 269.0
margin_bottom = 81.0
rect_pivot_offset = Vector2( 71, 48 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/normal = SubResource( 8 )

[node name="actions" type="MarginContainer" parent="v"]
show_behind_parent = true
margin_top = 81.0
margin_right = 269.0
margin_bottom = 125.0

[node name="bg" type="Panel" parent="v/actions"]
self_modulate = Color( 0.34902, 0.34902, 0.34902, 1 )
margin_right = 269.0
margin_bottom = 44.0
custom_styles/panel = SubResource( 14 )

[node name="m" type="MarginContainer" parent="v/actions"]
margin_right = 269.0
margin_bottom = 44.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10

[node name="h" type="HBoxContainer" parent="v/actions/m"]
margin_left = 59.0
margin_top = 10.0
margin_right = 209.0
margin_bottom = 34.0
size_flags_horizontal = 4
custom_constants/separation = 4
alignment = 1

[node name="play" type="MarginContainer" parent="v/actions/m/h"]
margin_right = 38.0
margin_bottom = 24.0
rect_min_size = Vector2( 38, 0 )
size_flags_vertical = 0

[node name="button" type="Button" parent="v/actions/m/h/play"]
self_modulate = Color( 0.384314, 0.603922, 0.270588, 1 )
margin_right = 38.0
margin_bottom = 24.0
hint_tooltip = "Play"
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Panel" parent="v/actions/m/h/play"]
margin_left = 7.0
margin_right = 31.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
size_flags_horizontal = 4
custom_styles/panel = SubResource( 19 )

[node name="Sprite" type="Sprite" parent="v/actions/m/h/play/icon"]
position = Vector2( 13, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 12 )

[node name="Sprite2" type="Sprite" parent="v/actions/m/h/play/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 12 )

[node name="rename" type="MarginContainer" parent="v/actions/m/h"]
margin_left = 42.0
margin_right = 66.0
margin_bottom = 24.0

[node name="button" type="Button" parent="v/actions/m/h/rename"]
margin_right = 24.0
margin_bottom = 24.0
hint_tooltip = "Rename"
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Panel" parent="v/actions/m/h/rename"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
custom_styles/panel = SubResource( 19 )

[node name="Sprite2" type="Sprite" parent="v/actions/m/h/rename/icon"]
self_modulate = Color( 0, 0, 0, 0.501961 )
position = Vector2( 13, 13 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="Sprite" type="Sprite" parent="v/actions/m/h/rename/icon"]
position = Vector2( 12, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 10 )

[node name="edit color" type="MarginContainer" parent="v/actions/m/h"]
margin_left = 70.0
margin_right = 94.0
margin_bottom = 24.0

[node name="button" type="Button" parent="v/actions/m/h/edit color"]
margin_right = 24.0
margin_bottom = 24.0
hint_tooltip = "Select color"
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Panel" parent="v/actions/m/h/edit color"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
custom_styles/panel = SubResource( 19 )

[node name="Sprite2" type="Sprite" parent="v/actions/m/h/edit color/icon"]
self_modulate = Color( 0, 0, 0, 0.501961 )
position = Vector2( 13, 13 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="Sprite" type="Sprite" parent="v/actions/m/h/edit color/icon"]
position = Vector2( 12, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 9 )

[node name="dupe" type="MarginContainer" parent="v/actions/m/h"]
margin_left = 98.0
margin_right = 122.0
margin_bottom = 24.0

[node name="button" type="Button" parent="v/actions/m/h/dupe"]
margin_right = 24.0
margin_bottom = 24.0
hint_tooltip = "Duplicate"
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Panel" parent="v/actions/m/h/dupe"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
custom_styles/panel = SubResource( 19 )

[node name="shadow" type="Sprite" parent="v/actions/m/h/dupe/icon"]
self_modulate = Color( 0, 0, 0, 0.501961 )
position = Vector2( 13, 13 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="Sprite" type="Sprite" parent="v/actions/m/h/dupe/icon"]
position = Vector2( 12, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 11 )

[node name="delete" type="MarginContainer" parent="v/actions/m/h"]
margin_left = 126.0
margin_right = 150.0
margin_bottom = 24.0

[node name="button" type="Button" parent="v/actions/m/h/delete"]
modulate = Color( 1, 0, 0, 1 )
margin_right = 24.0
margin_bottom = 24.0
hint_tooltip = "Delete"
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 15 )
custom_styles/hover = SubResource( 16 )
custom_styles/pressed = SubResource( 17 )
custom_styles/normal = SubResource( 18 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="icon" type="Panel" parent="v/actions/m/h/delete"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
custom_styles/panel = SubResource( 19 )

[node name="Sprite2" type="Sprite" parent="v/actions/m/h/delete/icon"]
self_modulate = Color( 0, 0, 0, 0.501961 )
position = Vector2( 13, 13 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="Sprite" type="Sprite" parent="v/actions/m/h/delete/icon"]
position = Vector2( 12, 12 )
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 8 )

[node name="textEdit" type="MarginContainer" parent="v/actions"]
visible = false
margin_right = 269.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 44 )
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="v" type="HBoxContainer" parent="v/actions/textEdit"]
margin_top = 10.0
margin_right = 269.0
margin_bottom = 42.0
size_flags_horizontal = 5
alignment = 1

[node name="TextEdit" type="TextEdit" parent="v/actions/textEdit/v"]
margin_left = 14.0
margin_right = 164.0
margin_bottom = 32.0
rect_min_size = Vector2( 150, 32 )
size_flags_horizontal = 4
size_flags_vertical = 4
custom_fonts/font = SubResource( 20 )
text = "Save.lored"
breakpoint_gutter = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="h" type="HBoxContainer" parent="v/actions/textEdit/v"]
margin_left = 168.0
margin_right = 254.0
margin_bottom = 32.0
custom_constants/separation = 10
alignment = 1

[node name="accept" type="MarginContainer" parent="v/actions/textEdit/v/h"]
margin_right = 38.0
margin_bottom = 32.0
rect_min_size = Vector2( 38, 24 )
size_flags_horizontal = 4
size_flags_vertical = 0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="button" type="Button" parent="v/actions/textEdit/v/h/accept"]
self_modulate = Color( 0.384314, 0.603922, 0.270588, 1 )
margin_right = 38.0
margin_bottom = 32.0
hint_tooltip = "Accept new filename"
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m" type="MarginContainer" parent="v/actions/textEdit/v/h/accept"]
margin_right = 38.0
margin_bottom = 32.0
rect_min_size = Vector2( 38, 0 )
mouse_filter = 2
size_flags_horizontal = 4
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="icon" type="Panel" parent="v/actions/textEdit/v/h/accept/m"]
margin_left = 7.0
margin_top = 4.0
margin_right = 31.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
size_flags_horizontal = 4
custom_styles/panel = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="v/actions/textEdit/v/h/accept/m/icon"]
texture = ExtResource( 14 )
centered = false

[node name="shadow" type="Sprite" parent="v/actions/textEdit/v/h/accept/m/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 14 )
centered = false

[node name="cancel" type="MarginContainer" parent="v/actions/textEdit/v/h"]
margin_left = 48.0
margin_right = 86.0
margin_bottom = 32.0
rect_min_size = Vector2( 38, 0 )
size_flags_horizontal = 4
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="button" type="Button" parent="v/actions/textEdit/v/h/cancel"]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 38.0
margin_bottom = 32.0
hint_tooltip = "Cancel"
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m" type="MarginContainer" parent="v/actions/textEdit/v/h/cancel"]
margin_left = 3.0
margin_right = 35.0
margin_bottom = 32.0
mouse_filter = 2
size_flags_horizontal = 4
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 4

[node name="icon" type="Panel" parent="v/actions/textEdit/v/h/cancel/m"]
margin_left = 4.0
margin_top = 4.0
margin_right = 28.0
margin_bottom = 28.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 4
custom_styles/panel = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="v/actions/textEdit/v/h/cancel/m/icon"]
scale = Vector2( 0.5, 0.5 )
texture = ExtResource( 13 )
centered = false

[node name="shadow" type="Sprite" parent="v/actions/textEdit/v/h/cancel/m/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 2, 2 )
texture = ExtResource( 13 )
centered = false

[node name="delete save" type="MarginContainer" parent="v/actions"]
visible = false
margin_right = 269.0
margin_bottom = 71.0
rect_min_size = Vector2( 0, 44 )
rect_pivot_offset = Vector2( 0, -81 )
custom_constants/margin_top = 10
custom_constants/margin_bottom = 10

[node name="v" type="VBoxContainer" parent="v/actions/delete save"]
margin_top = 10.0
margin_right = 269.0
margin_bottom = 61.0
custom_constants/separation = 10
alignment = 1

[node name="text" type="Label" parent="v/actions/delete save/v"]
margin_left = 92.0
margin_right = 177.0
margin_bottom = 17.0
size_flags_horizontal = 4
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Delete save?!"
align = 1

[node name="h" type="HBoxContainer" parent="v/actions/delete save/v"]
margin_top = 27.0
margin_right = 269.0
margin_bottom = 51.0
custom_constants/separation = 8
alignment = 1

[node name="delete" type="MarginContainer" parent="v/actions/delete save/v/h"]
margin_left = 70.0
margin_right = 108.0
margin_bottom = 24.0
rect_min_size = Vector2( 38, 0 )
size_flags_horizontal = 0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="button" type="Button" parent="v/actions/delete save/v/h/delete"]
self_modulate = Color( 1, 0, 0, 1 )
margin_right = 38.0
margin_bottom = 24.0
hint_tooltip = "Literally die"
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m" type="MarginContainer" parent="v/actions/delete save/v/h/delete"]
margin_left = 7.0
margin_right = 31.0
margin_bottom = 24.0
mouse_filter = 2
size_flags_horizontal = 4
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="icon" type="Panel" parent="v/actions/delete save/v/h/delete/m"]
margin_right = 24.0
margin_bottom = 24.0
rect_min_size = Vector2( 24, 24 )
mouse_filter = 2
size_flags_vertical = 0
custom_styles/panel = SubResource( 25 )

[node name="Sprite" type="Sprite" parent="v/actions/delete save/v/h/delete/m/icon"]
self_modulate = Color( 1, 0, 0, 1 )
position = Vector2( -4, -8 )
texture = ExtResource( 15 )
centered = false

[node name="shadow" type="Sprite" parent="v/actions/delete save/v/h/delete/m/icon/Sprite"]
self_modulate = Color( 0, 0, 0, 0.501961 )
show_behind_parent = true
position = Vector2( 1, 0 )
texture = ExtResource( 15 )
centered = false

[node name="cancel" type="MarginContainer" parent="v/actions/delete save/v/h"]
margin_left = 116.0
margin_right = 198.0
margin_bottom = 24.0
rect_min_size = Vector2( 38, 24 )
size_flags_horizontal = 0
size_flags_vertical = 0
custom_constants/margin_right = 0
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 0

[node name="button" type="Button" parent="v/actions/delete save/v/h/cancel"]
self_modulate = Color( 0.47451, 0.47451, 0.47451, 1 )
margin_right = 82.0
margin_bottom = 24.0
hint_tooltip = "I just nearly took an incredibly irresponsible and reckless action."
focus_mode = 0
mouse_default_cursor_shape = 2
theme = ExtResource( 16 )
custom_fonts/font = SubResource( 21 )
custom_styles/hover = SubResource( 22 )
custom_styles/pressed = SubResource( 23 )
custom_styles/normal = SubResource( 24 )
enabled_focus_mode = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="m" type="MarginContainer" parent="v/actions/delete save/v/h/cancel"]
margin_right = 82.0
margin_bottom = 24.0
rect_pivot_offset = Vector2( -141, -92 )
mouse_filter = 2
size_flags_horizontal = 4
custom_constants/margin_right = 10
custom_constants/margin_top = 0
custom_constants/margin_left = 10
custom_constants/margin_bottom = 0

[node name="text" type="Label" parent="v/actions/delete save/v/h/cancel/m"]
margin_left = 10.0
margin_top = 3.0
margin_right = 72.0
margin_bottom = 20.0
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 4 )
text = "Yeah, nah"
align = 1

[connection signal="pressed" from="v/m/select" to="." method="_on_select_pressed"]
[connection signal="pressed" from="v/actions/m/h/play/button" to="." method="_on_play_pressed"]
[connection signal="pressed" from="v/actions/m/h/rename/button" to="." method="_on_rename_pressed"]
[connection signal="pressed" from="v/actions/m/h/edit color/button" to="." method="_on_edit_color_pressed"]
[connection signal="pressed" from="v/actions/m/h/dupe/button" to="." method="_on_dupe_pressed"]
[connection signal="pressed" from="v/actions/m/h/delete/button" to="." method="_on_delete_pressed"]
[connection signal="text_changed" from="v/actions/textEdit/v/TextEdit" to="." method="_on_TextEdit_text_changed"]
[connection signal="pressed" from="v/actions/textEdit/v/h/accept/button" to="." method="_on_accept_new_savename_pressed"]
[connection signal="pressed" from="v/actions/textEdit/v/h/cancel/button" to="." method="_on_savename_edit_cancel_pressed"]
[connection signal="pressed" from="v/actions/delete save/v/h/delete/button" to="." method="_on_delete_delete_pressed"]
[connection signal="pressed" from="v/actions/delete save/v/h/cancel/button" to="." method="_on_cancel_delete_pressed"]
